p5-codegen/tests/VarActualDesignator.mj.err
 line 2, column 7: error: var actual must be a designator
