p5-codegen/tests/VarActualDesignator.mj
proc foo(var x: int) {
  foo(1);
}
